# vocab-notifier

./: .env.example  .gitignore  AGENTS.md  README.md  SPEC.md  pod.yaml  pyproject.toml  vn
data/: english.csv  german.csv  german_additional_500.csv  german_enrichment_150.csv  german_fallback_examples_web_150.csv  german_heuristic_examples_web_10.csv  german_heuristic_examples_web_10_more.csv  german_heuristic_examples_web_10_more_2.csv  german_heuristic_examples_web_10_more_3.csv  german_heuristic_examples_web_10_more_8.csv  german_heuristic_examples_web_25_more_4.csv  german_heuristic_examples_web_25_more_5.csv  german_heuristic_examples_web_25_more_6.csv  german_heuristic_examples_web_25_more_7.csv  german_missing_examples_fallback_150.csv  german_missing_examples_web_16.csv  german_spoken_common_200.csv  german_tatoeba_examples_120.csv  german_tatoeba_examples_40.csv  german_tatoeba_examples_80.csv  german_tatoeba_examples_short_100_more.csv  german_tatoeba_examples_short_120.csv  german_tatoeba_examples_short_30_more.csv  german_tatoeba_examples_short_50_more.csv  spanish.csv
launchd/: com.darkcreation.vocab-notifier.german.hourly.plist
profiles/english/: profile.json
profiles/german/: profile.json
profiles/spanish/: profile.json
src/app/: __init__.py  ack_server.py  cli.py  config.py  db.py  models.py  notifier.py  page_renderer.py  presentation.py  selector.py
src/app/services/: __init__.py  (+1 more)
src/macos/: NotificationDetailHelper.swift
tests/: test_config.py  test_notifier.py  test_page_renderer.py  test_pending_notifications.py  test_selector.py
