[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vocab-notifier"
version = "0.1.0"
description = "A local-first macOS notifier for learning vocabulary with profile-driven language decks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
vn = "app.cli:main"
"vocab-notifier" = "app.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
